about page image added

--- a/packages/system/public/views/about.html
+++ b/packages/system/public/views/about.html
@@ -39,9 +39,9 @@
     </p>
 </div>
 
-<div class="container">
+<div class="container" style="margin-bottom: 40px">
     <h2 class="page-header">about the owner</h2>
-    <img style="border: 1px solid red; border-radius: 25px; margin-right: 50px" class="pull-left" src="/system/assets/img/logo.jpg" width="400" height="275" />
+    <img style="border: 1px solid red; border-radius: 25px; margin-right: 50px" class="pull-left" src="/system/assets/img/about/family1.jpg" width="400" height="275" />
     <p>
         The owner, Juan Calderon, started this company after attending events with multiple organizers over the last 8 years.
         There were things that he liked with every organizer, and many things that he did not. He talked with multiple attendees
