--- a/packages/users/public/views/acct-details.html
+++ b/packages/users/public/views/acct-details.html
@@ -3,7 +3,7 @@
         <div class="panel-heading table-title">
             account info
             <div class="panel-body panel-text">
-                <label style="width: 120px">First Name: </label>{{currAcct.userFirstName}} {{currAcct.userLastName}}<br>
+                <label style="width: 120px">Name: </label>{{currAcct.userFirstName}} {{currAcct.userLastName}}<br>
                 <label style="width: 120px">Email: </label>{{currAcct.userEmail}}<br><br>
                 <label style="width: 120px">Phone: </label>{{currAcct.primaryPhoneNumber}}<br>
                 <label style="width: 120px">Address: </label>{{currAcct.streetAddress}}<br>
@@ -23,9 +23,9 @@
                 <div ng-hide="editting" ng-repeat="role in currAcct.roles">
                     <label style="width: 200px">{{role}}</label>
                 </div>
-                <div ng-show="editting" ng-repeat="possRole in possibleRoles">
-                    <label style="width: 200px">{{possRole}}</label>
-                    <input type="checkbox" value="member" ng-model="currAcct.roles.member">
+                <div ng-show="editting" ng-repeat="role in possibleRoles">
+                    <label style="width: 200px">{{role}}</label>
+                    <input type="checkbox" value="{{role}}" checked="hasRole(role)">
                 </div>
             </div>
         </div>
