--- a/packages/custom/vehicles/public/views/index.html
+++ b/packages/custom/vehicles/public/views/index.html
@@ -6,7 +6,7 @@
    </h2>
 </div>
 
-<div data-ng-controller="VehiclesController" data-ng-init="">
+<div data-ng-controller="VehiclesController" data-ng-init="defaultShow()">
     <div class="container">
         <div class="border-align col-md-12" data-ng-repeat="vehicle in vehicles">
             <hr>
