--- a/packages/custom/vehicles/public/views/create.html
+++ b/packages/custom/vehicles/public/views/create.html
@@ -1,7 +1,7 @@
 <div class="modal-header">
     <h3 class="modal-title" align="center">Add New Vehicle</h3>
 </div>
-<div class="modal-body">
+<div class="modal-body" data-ng-controller="VehiclesController">
     <form name="addForm" class="form-horizontal" role="form" data-ng-submit="create(addForm.$valid)" method="post" novalidate>
         <div align="center">
             <p><input type="checkbox">Make primary</p>
