--- a/packages/users/public/views/acct-details.html
+++ b/packages/users/public/views/acct-details.html
@@ -41,7 +41,7 @@
         <div class="panel-heading table-title">
             account roles
             <div ng-hide="editting" ng-click="editting=true" style="font-size: 12px" class="panel-text clickable-row pull-right"><span class="glyphicon glyphicon-edit"></span> edit</div>
-            <div ng-show="editting" ng-click="setRoles(currAcct.roles)" style="font-size: 12px" class="panel-text clickable-row pull-right"><span class="glyphicon glyphicon-floppy-saved"></span> save</div>
+            <div ng-show="editting" ng-click="setNewRoles(currAcct.roles)" style="font-size: 12px" class="panel-text clickable-row pull-right"><span class="glyphicon glyphicon-floppy-saved"></span> save</div>
             <div class="panel-body panel-text">
                 <div ng-hide="editting" ng-repeat="role in currAcct.roles">
                     <label style="width: 200px">{{role}}</label>
