--- a/packages/users/public/views/register.html
+++ b/packages/users/public/views/register.html
@@ -167,9 +167,9 @@
                     <div class="col-md-2">
                         <select data-ng-model="userSkillLvl" class="form-control glowing-border" required>
                             <option value="">Select a skill level
-                            <option value="Novice">Novice
-                            <option value="Intermediate">Intermediate
-                            <option value="Advanced">Advanced
+                            <option value="novice">Novice
+                            <option value="intermediate">Intermediate
+                            <option value="advanced">Advanced
                         </select>
                     </div>
                 </div>
